<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GooglyZoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="googly_zebra_name">Zebr</string>
    <string name="googly_gnu_name">Gn</string>
    <string name="googly_hippo_name">Hipp</string>
    <string name="googly_bee_name">B</string>
    <string name="googly_elephant_name">Eleph</string>
    <string name="googly_cow_name">Cow</string>
    <string name="googly_goat_name">Goat</string>
    <string name="googly_elk_name">Elk</string>
    <string name="googly_horse_name">Hors</string>
    <string name="googly_pig_name">Pig</string>
    <string name="googly_triceratops_name">Tricerat</string>
    <string name="googly_tbarthel_name">Tbarth</string>
    <string name="googly_vbarthel_name">Vbarth</string>
    <string name="googly_name_ext">oogly</string>

    <!-- Instructions !-->
    <string name="instructions_title">Capture, save and share</string>
    <string name="instructions_capture">Tap your screen <b>twice</b> to take a picture at any time.</string>
    <string name="instructions_save">Once picture is taken, you can <b>save</b> it in your gallery&#8230;</string>
    <string name="instructions_share">&#8230;as well as <b>share</b> it with your friends!</string>


    <!-- Action bar !-->
    <string name="googly_drawer_instruction">Select your Googly Pet</string>
    <string name="googly_action_more_projects">More Projects</string>
    <string name="action_license_title">License</string>
    <string name="action_about_title">About</string>
    <string name="action_beta_title">Beta</string>
    <string name="action_support">Buy us a coffee</string>
    <string name="action_camera">Camera</string>
    <string name="action_report_bug">Report a bug</string>

    <!-- Contact Us -->
    <string name="contact_mail">tvbarthel@gmail.com</string>
    <string name="contact_default_subject">[GooglyZoo] Bug Report</string>
    <string name="contact_send_to_uri">mailto:%1$s?subject=%2$s</string>

    <!-- Toast !-->
    <string name="face_detection_not_support">Sorry, your device doesn\'t support Face Detection :(</string>
    <string name="basic_face_detection">SmoothFaceDetection OFF</string>
    <string name="smooth_face_detection">SmoothFaceDetection ON</string>
    <string name="donor_compensation">Thank-you gift for donors</string>
    <string name="screen_capture">Saved in your gallery!</string>

    <!-- More project dialog Fragment!-->
    <string name="dialog_more_fragment_title">Find more projects</string>
    <string name="dialog_more_fragment_chasy_title">Chase Whisply</string>
    <string name="dialog_more_fragment_simple_thermometer_title">Simple Thermometer</string>
    <string name="dialog_more_fragment_simple_weather_forecast_title">Simple Weather Forecast</string>
    <string name="dialog_more_fragment_simplethermometer_package_name">fr.tvbarthel.apps.simplethermometer</string>
    <string name="dialog_more_fragment_chase_whisply_package_name">fr.tvbarthel.games.chasewhisply</string>
    <string name="dialog_more_fragment_simple_weather_forecast_package_name">fr.tvbarthel.apps.simpleweatherforcast</string>

    <!-- License dialog Fragment -->
    <string name="dialog_license_title">License</string>
    <string name="dialog_license_content">
        Copyright © 2013 tvbarthel.\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses/.
    </string>

    <!-- About dialog Fragment -->
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_content">GooglyZoo is an open-source application developed by Thomas \"tbarthel\" Barthélémy and Vincent \"vbarthel\" Barthélémy, two students in Computer Engineering.\n\nCode source: https://github.com/tvbarthel/GooglyZoo\n\nThis application is an head tracking attempt based on SmoothFaceDetectionListerner https://github.com/tvbarthel/GooglyZoo/blob/master/App/GooglyZooApp/src/main/java/fr/tvbarthel/attempt/googlyzooapp/listener/SmoothFaceDetectionListener.java \n\nImages, which come from clker.com, are under the latest version of the creative commons CC0 public domain dedication:\nhttp://creativecommons.org/publicdomain/zero/1.0/ </string>


    <!-- dialog fragments -->
    <string name="dialog_ok">OK</string>
</resources>
