<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.tvbarthel.attempt.googlyzooapp.MainActivity" >
    <item android:id="@+id/action_more_projects"
        android:title="@string/googly_action_more_projects"
        android:showAsAction="withText|ifRoom" />
    <item android:id="@+id/action_license"
          android:title="@string/action_license_title"
          android:orderInCategory="100"
          android:showAsAction="never"/>
    <item android:id="@+id/action_about"
          android:title="@string/action_about_title"
          android:orderInCategory="90"
          android:showAsAction="never" />
    <item android:id="@+id/action_beta"
          android:title="@string/action_beta_title"
          android:orderInCategory="80"
          android:showAsAction="never" />
    <item android:id="@+id/action_support"
        android:title="@string/action_name_support"
        android:orderInCategory="101"
        android:showAsAction="never"/>
</menu>
