<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/transparent"
              android:gravity="center_vertical"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/instructions_title"
        android:id="@+id/instructions_title"
        android:layout_marginLeft="@dimen/instructions_horizontal_margin"
        android:layout_marginRight="@dimen/instructions_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/instructions_padding"
        android:paddingTop="@dimen/instructions_padding"
        android:paddingRight="@dimen/instructions_padding"
        android:textColor="@color/white"
        android:drawableRight="@drawable/ic_action_about"
        android:fontFamily="sans-serif-light"
        android:background="@color/transparent_grey"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructions_content"
        android:layout_marginLeft="@dimen/instructions_horizontal_margin"
        android:layout_marginRight="@dimen/instructions_horizontal_margin">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/instructions_capture"
                android:textColor="@color/text_view_grey"
                android:id="@+id/instructions_take_picture"
                android:drawableTop="@drawable/ic_action_hardware_phone"
                android:padding="@dimen/instructions_padding"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/instructions_save"
                android:textColor="@color/text_view_grey"
                android:drawableTop="@drawable/ic_action_content_save"
                android:layout_below="@+id/instructions_take_picture"
                android:id="@+id/instructions_save"
                android:layout_marginTop="3dp"
                android:paddingLeft="@dimen/instructions_padding"
                android:paddingRight="@dimen/instructions_padding"
                android:paddingTop="@dimen/instructions_padding"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_view_grey"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/instructions_share"
                android:layout_below="@+id/instructions_save"
                android:gravity="right"
                android:drawableTop="@drawable/ic_action_social_share"
                android:id="@+id/instructions_share"
                android:paddingLeft="@dimen/instructions_padding"
                android:paddingRight="@dimen/instructions_padding"
                android:paddingBottom="@dimen/instructions_padding"
                android:background="@color/white"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>