<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialog_more_fragment_title"
            android:id="@+id/textView"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/text_view_grey"/>

        <RelativeLayout
            android:id="@+id/dialog_more_projects_chasy"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_entry_height"
            android:background="@drawable/more_projects_entry"
            android:clickable="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialog_more_fragment_chasy_title"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="8dp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:gravity="left"
                android:background="@color/transparent_black"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_more_projects_chasy_ic"
                android:src="@drawable/chasy_ic"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/dialog_more_projects_simple_thermometer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_entry_height"
            android:background="@drawable/more_projects_entry"
            android:clickable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/dialog_more_fragment_simple_thermometer_title"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="8dp"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:background="@color/transparent_black"
                android:gravity="left"
                android:paddingLeft="@dimen/activity_horizontal_margin"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dialog_more_projects_simple_thermometer_ic"
                android:src="@drawable/simple_thermometer_ic"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>